# DePIN-Agent-Economy

./: .gitignore  README.md  agent_client.py  dashboard_server.py  mock_server.py  test_vertex_models.py
.github/workflows/: e2e.yml
contracts/cache/: solidity-files-cache.json
contracts/script/: DeployMainnet.s.sol
contracts/src/: AgentIdentity.sol  AgentSmartAccount.sol  BME.sol  ReputationRegistry.sol  SubscriptionManager.sol  UtilityToken.sol
contracts/test/: AgentSmartAccount.t.sol  BME.t.sol  Deploy.t.sol  Phase4.t.sol
docs/: ARCHITECTURE.md  Bugs.md  COMMUNICATION.md  COMPONENTS.md  DETAILED_ROADMAP.md  LEGAL_COMPLIANCE.md  PRODUCTION_PLAYBOOK.md  ROADMAP.md  UI_UX_DESIGN.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
tests/: e2e_integration.py  test_agent_client.py  test_eip7702_rlp.py
verifier/: Cargo.toml
verifier/src/: lib.rs  math.rs
