[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# We stub these dependencies for local testing, 
# normally you'd use stylus-sdk and alloy-primitives.
# stylus-sdk = "0.5.0"
# alloy-primitives = "0.7.0"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
