[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# stylus-sdk = "0.5.0"
# alloy-primitives = "0.7.0"
# To avoid complex setup issues right now in the generic test env, we'll keep them as optional or commented, but we will write the code assuming alloy structs are defined locally if they aren't available. Actually, let's just add alloy-primitives since it's pure Rust and cross-compiles easily.
alloy-primitives = { version = "0.7.6", default-features = false }
stylus-sdk = { version = "0.10.7", optional = true }

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
